update index to link eah

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ CV &middot;
 
 <h1>Other Writing</h1>
 <ul>
-    <li>EA Handbook, editor</li>
+    <li><a href="EA_Handbook.pdf">EA Handbook</a> (editor)</li>
     <li><a href="https://aiimpacts.org/interpreting-ai-compute-trends/">Interpreting AI compute trends</a></li>
     <li><a href="https://forum.effectivealtruism.org/posts/qYbqX3jX4JnTtHA5f/leverage-research-reviewing-the-basic-facts">Leverage Research: reviewing the basic facts</a></li>
     <li><a href="https://forum.effectivealtruism.org/posts/EP6X362Q3ziibA99e/show-a-framework-for-shaping-your-talent-for-direct-work">SHOW: A framework for shaping your talent for direct work</a></li>
