--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href=style.css>
 
 <p class="center-text"> [firstname].[lastname]@jesus.ox.ac.uk &middot;<br/>
-CV &middot; 
+<a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">Causal Incentives Working Group</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Google Scholar</a> &middot; <a href="https://twitter.com/ryancareyai">Twitter</a></p>
 
 <h1>Summary</h1>
