--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<head>
 <link rel="stylesheet" href=style.css>
+</head>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">Causal Incentives Working Group</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Google Scholar</a> &middot; <a href="https://twitter.com/ryancareyai">Twitter</a></p>
