--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
-&middot; <a href="https://twitter.com/ryancareyai">Twitter</a></p>
+<a href="https://twitter.com/ryancareyai">Twitter</a></p> &middot;
 <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> 
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
