--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href=style.css>
 </head>
 
-<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<p><a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
-<a href="https://twitter.com/ryancareyai">Twitter</a></p> &middot;
+<a href="https://twitter.com/ryancareyai">Twitter</a></p> &middot; 
 <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> 
 </p>
 
