--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <link rel="stylesheet" href=style.css>
 </head>
 
-<p><a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<p>I’m a final-year PhD student at Oxford, supervised by <a href="https://www.stats.ox.ac.uk/~evans/">Robin Evans</a>, where I work on theory involving causal models. I’m also a cofounder of the <a href="http://causalincentives.com">Causal Incentives Working Group</a>, which uses causal models to reason about AI safety. Previously, I’ve been a research fellow at the Future of Humanity Institute, a research intern at DeepMind and OpenAI, and the founder of the <a href="https://forum.effectivealtruism.org/">EA Forum</a>.</p>
+
+<p> a &middot; b </p>
+
+<p> c d</p>
+<p> e <a href="ryan_carey_cv.pdf">cv</a> d</p>
+
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<a href="https://causalincentives.com/">Causal Incentives Working Group</a></p>
+
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<a href="https://causalincentives.com/">Causal Incentives Working Group</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Google Scholar</a></p>
+
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<a href="https://causalincentives.com/">Causal Incentives Working Group</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Google Scholar</a> &middot; <a href="https://twitter.com/ryancareyai">Twitter</a></p>
+
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<a href="https://causalincentives.com/">CIWG</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> &middot; <a href="https://twitter.com/ryancareyai">Twitter</a></p>
+
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
-<a href="https://twitter.com/ryancareyai">Twitter</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> 
-</p>
+<a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> 
+
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<a href="https://causalincentives.com/">CIWG</a> &middot; 
+<a href="https://twitter.com/ryancareyai">Twitter</a></p> &middot;
+<a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> 
+
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
+<a href="https://causalincentives.com/">CIWG</a> &middot; 
+&middot; <a href="https://twitter.com/ryancareyai">Twitter</a></p>
 
 <p>I’m a final-year PhD student at Oxford, supervised by <a href="https://www.stats.ox.ac.uk/~evans/">Robin Evans</a>, where I work on theory involving causal models. I’m also a cofounder of the <a href="http://causalincentives.com">Causal Incentives Working Group</a>, which uses causal models to reason about AI safety. Previously, I’ve been a research fellow at the Future of Humanity Institute, a research intern at DeepMind and OpenAI, and the founder of the <a href="https://forum.effectivealtruism.org/">EA Forum</a>.</p>
 
