--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
 <a href="https://twitter.com/ryancareyai">Twitter</a> &middot;
-<a href="scholar.google.com/citations?user=9U1CpcAAAAAJ&hl">Scholar</a> </p>
+<a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl">Scholar</a> </p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
 <a href="https://twitter.com/ryancareyai">Twitter</a> &middot;
-<a href="scholar.google.com">Scholar</a> </p>
+<a href="https://scholar.google.com">Tw</a> </p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
 <a href="https://twitter.com/ryancareyai">Twitter</a> &middot;
-<a href="google.com">Scholar</a> </p>
+<a href="https://google.com">Twit</a> </p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
