--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> </p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
-<a href="https://causalincentives.com/">CIWG</a> &middot; 
-<a href="https://twitter.com/ryancareyai">Twitter</a> &middot;
-<a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl">Scholar</a> </p>
+<a href="https://causalincentives.com/">C</a> &middot; 
+<a href="https://twitter.com/ryancareyai">T</a> &middot;
+<a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl">S</a> </p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; 
