--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">CIWG</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> &middot; <a href="https://twitter.com/ryancareyai">Twitter</a></p>
 
-<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
-<a href="https://causalincentives.com/">CIWG</a> &middot; 
-<a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> </p>
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; <a href="https://causalincentives.com/">CIWG</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Scholar</a> </p>
 
-<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
-<a href="https://causalincentives.com/">C</a> &middot; 
-<a href="https://twitter.com/ryancareyai">T</a> &middot;
+<p> aa <a href="ryan_carey_cv.pdf">CV</a> 
+<a href="https://causalincentives.com/">C</a> 
+<a href="https://twitter.com/ryancareyai">T</a> 
 <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl">S</a> </p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
