--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <p> e <a href="ryan_carey_cv.pdf">cv</a> d</p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
-<a href="https://causalincentives.com/">Causal Incentives Working Group</a> <a href="https://causalincentives.com/">Causal Incentives Working Group</a>
-</p>
+<a href="https://causalincentives.com/">Causal Incentives Working Group</a> <a href="https://causalincentives.com/">Causal Incentives Working Group</a></p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
 <a href="https://causalincentives.com/">Causal Incentives Working Group</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en">Google Scholar</a></p>
