--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
 <p> e <a href="ryan_carey_cv.pdf">cv</a> d</p>
 
-<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">S</a> d</p>
+<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a>    d</p>
+
+<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">Scholar</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a>    d</p>
+
+<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">Scholar</a><a href="https://twitter.com/ryancareyai">Twitter</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a>    d</p>
 
 <p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">S</a> dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
 
