--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <p><a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
 
+<p><a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en&oi=ao">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
+
 <p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">S</a> dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
 
 <p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
