--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <link rel="stylesheet" href=style.css>
 </head>
 
-<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> d</p>
-
-<p> e <a href="ryan_carey_cv.pdf">cv</a> d</p>
-
-<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a>    d</p>
-
-<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">Scholar</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a><a href="https://scholar.google.com">S</a>    d</p>
-
-<p> eeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a>    d</p>
-
 <p> eeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
+
+<p> <a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
+
+<p><a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
 
 <p><a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
 
