--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
 <link rel="stylesheet" href=style.css>
+<meta name="viewport" content="initial-scale=1">
 </head>
 
 <p> eeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
