--- a/index.html
+++ b/index.html
@@ -3,23 +3,7 @@
 <meta name="viewport" content="initial-scale=1">
 </head>
 
-<p> eeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
-
-<p> <a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
-
-<p><a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
-
-<p><a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
-
-<p><a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en&oi=ao">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
-
-<p> eeeeeeeeeeeeeeeeeeeeeeeeee <a href="ryan_carey_cv.pdf">cv</a> <a href="https://scholar.google.com">S</a> dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
-
-<p> aa <a href="ryan_carey_cv.pdf">CV</a> &middot; 
-<a href="https://causalincentives.com/">CIWG</a> &middot; 
-<a href="https://twitter.com/ryancareyai">Twitter</a> &middot;
-<a href="https://scholar.google.com">Tw</a> </p>
-
+<p center-text> <a href="ryan_carey_cv.pdf">CV</a> <a href="https://scholar.google.com">Scholar</a> <a href="https://twitter.com/ryancareyai">Twitter</a> <a href="https://causalincentives.com">CIWG</a></p>
 
 <p>I’m a final-year PhD student at Oxford, supervised by <a href="https://www.stats.ox.ac.uk/~evans/">Robin Evans</a>, where I work on theory involving causal models. I’m also a cofounder of the <a href="http://causalincentives.com">Causal Incentives Working Group</a>, which uses causal models to reason about AI safety. Previously, I’ve been a research fellow at the Future of Humanity Institute, a research intern at DeepMind and OpenAI, and the founder of the <a href="https://forum.effectivealtruism.org/">EA Forum</a>.</p>
 
