--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="initial-scale=1">
 </head>
 
-<p class="center-text"> <a href="ryan_carey_cv.pdf">CV</a> &middot; <a href="https://scholar.google.com">Scholar</a> &middot; <a href="https://twitter.com/ryancareyai">Twitter</a> &middot; <a href="https://causalincentives.com">CIWG</a></p>
+<p class="center-text"> <a href="ryan_carey_cv.pdf">CV</a> &middot; <a href="https://scholar.google.com/citations?user=9U1CpcAAAAAJ&hl=en&oi=ao">Scholar</a> &middot; <a href="https://twitter.com/ryancareyai">Twitter</a> &middot; <a href="https://causalincentives.com">Causal Incentives Working Group</a></p>
 
 <p>I’m a final-year PhD student at Oxford, supervised by <a href="https://www.stats.ox.ac.uk/~evans/">Robin Evans</a>, where I work on theory involving causal models. I’m also a cofounder of the <a href="http://causalincentives.com">Causal Incentives Working Group</a>, which uses causal models to reason about AI safety. Previously, I’ve been a research fellow at the Future of Humanity Institute, a research intern at DeepMind and OpenAI, and the founder of the <a href="https://forum.effectivealtruism.org/">EA Forum</a>.</p>
 
