--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ AI safety problems.
 
 <p>
 One interesting problem is how to design a corrigibile system - one
-that wants to folow and not manipulate its instructions.
+that wants to follow and not manipulate its instructions.
 Even systems that try to learn the human's goals <a href="https://arxiv.org/abs/1709.06275">may be incorrigible</a>.
 Also, corrigible systems may behave unsafely, whereas ``<a href="https://arxiv.org/abs/2305.19861">shutdown instructable</a>'' systems are safe.</p>
 
